<resources>
    <string name="app_name">CalorieTrek</string>
    <string name="menu_action_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loading" />
    <string name="all_your_trainings">All your trainings</string>
    <string name="log_out">Log out</string>
    <string name="time_format_zero">00:00:00</string>
    <string name="s">seconds</string>
    <string name="m">minutes</string>
    <string name="h">hours</string>
    <string name="ongoing_training">Ongoing Training</string>
    <string name="training_started">Your training has started</string>
    <string name="pause_training">   P A U S E</string>
    <string name="start_training">S T A R T</string>
    <string name="stop_training">S T O P</string>
    <string name="resume_training">   R E S U M E</string>
    <string name="training_stopped">Do you want to finish the training and see the results?</string>
    <string name="positive_answer">Yes</string>
    <string name="negative_answer">Cancel</string>
    <string name="gps_dialog_title">GPS is Disabled</string>
    <string name="gps_dialog_message">Please enable GPS because this app calculates calorie consumption and distance traveled based on GPS.</string>
    <string name="gps_positive_answer">Enable GPS</string>
    <string name="gps_negative_answer">No</string>
    <string name="location_permissions_not_granted">Application needs permission to access location to calculate calorie consumption and distance traveled.</string>
    <string name="login_with">Login with...</string>
    <string name="dialog_welcome">Welcome!</string>
    <string name="dialog_message">CalorieTrek calculates only the calories that you burn doing physical, non-sedentary, activity. This does not include your resting calories, also known as your Resting Metabolic Rate (RMR).</string>
    <string name="new_user_inserted">New user inserted</string>
    <string name="existing_user">Existing user</string>
    <string name="cargo_weight_message">You can change the Cargo Weight during tracking.</string>
    <string name="select_cargo">Select Cargo Weight (kg)</string>
    <string name="current_cargo">20</string>
    <string name="hint_weight">Weight</string>
    <string name="weight_updated">Weight updated!</string>
    <string name="weight_not_updated">Weight not updated!</string>
    <string name="saved">Saved</string>
    <string name="not_saved">Not saved</string>
    <string name="input_your_weight">Input Your Weight (kg)</string>
    <string name="facebook_app_id">287766131743318</string>
    <string name="weight_saved">Your Weight has been saved.</string>
    <string name="weight_not_saved">Your Weight has not been changed.</string>
    <string name="your_weight">Your Weight</string>
    <string name="kg">kg</string>
    <string name="action_pdf">PDF Export</string>
    <string name="action_share">Share</string>
    <string name="action_details">Details</string>
    <string name="pdf_export_start">Generating PDF...</string>
    <string name="pdf_export_finished">PDF export finished!</string>
    <string name="pdf_save_path">/storage/emulated/0/CalorieTrek</string>
    <string name="pdf_meta_title">CalorieTrek Trainings</string>
    <string name="pdf_meta_subject">CalorieTrek Trainings</string>
    <string name="pdf_meta_keywords">CalorieTrek, PDF, Trainings</string>
    <string name="pdf_meta_author">CalorieTrek</string>
    <string name="pdf_meta_creator">CalorieTrek</string>
    <string name="pdf_title">CalorieTrek Trainings</string>
    <string name="pdf_createdBy">PDF created by user:</string>
    <string name="pdf_date">Date</string>
    <string name="pdf_description">This document contains training details calculated with the CalorieTrek application.</string>
    <string name="pdf_instructions">Trainings can be viewed on the following pages.</string>
    <string name="pdf_training_name">Training Name:</string>
    <string name="pdf_training_date">Training Date:</string>
    <string name="pdf_training_stats">Training Statistics:</string>
    <string name="pdf_table_stat">Stat</string>
    <string name="pdf_table_value">Value</string>
    <string name="pdf_table_Kcal">Kcal</string>
    <string name="pdf_table_time">Time</string>
    <string name="pdf_table_distance">Distance</string>
    <string name="pdf_table_elevationGain">Elevation Gain</string>
    <string name="pdf_date_format">dd/MM/yyyy</string>
    <string name="kcal">Kcal</string>
    <string name="distance">Distance</string>
    <string name="elevation_gain">Elevation gain</string>
    <string name="time">Time</string>
    <string name="metar">m</string>
    <string name="zero">0</string>
    <string name="_0_m">0 m</string>
    <string name="distance_zero">0 m</string>
    <string name="elevation_zero">0 m</string>
    <string name="calorie_zero">0</string>
    <string name="share_fb">Facebook</string>
    <string name="share_google">Google+</string>
    <string name="pdf_export">PDF Export</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="max_cargoweight">40</string>
</resources>
